<resources>
    <string name="app_name">whatsApp</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an Account</string>
    <string name="sign_up">Sign UP</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up_with_phone">Sign Up With Phone</string>
    <string name="click_to_sign_up">Click to Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_phone">Sign In With Phone</string>
    <string name="enter_phone_no">Enter Phone NO</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp">OTP</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>