<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignupActivity"
    android:background="@color/white2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/whatsapp" />

        <EditText
            android:id="@+id/name_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textSize="24sp"
            android:elevation="1dp" />

        <EditText
            android:id="@+id/email_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/password_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="10dp"
            android:text="@string/already_have_an_account"
            android:textSize="14sp"
            android:padding="4dp"
            android:textColor="@color/black"/>

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_Signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/sign_up"
            app:cornerRadius="5dp" />

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:gravity="center"-->
<!--            android:orientation="horizontal">-->

<!--            <Button-->
<!--                android:id="@+id/btn_Google"-->
<!--                android:layout_width="150dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginRight="5dp"-->
<!--                android:layout_marginLeft="2.5dp"-->
<!--                android:layout_weight="1"-->
<!--                android:backgroundTint="@color/white"-->
<!--                android:drawableLeft="@drawable/google"-->
<!--                android:padding="15dp"-->
<!--                android:text="@string/google"-->
<!--                android:textColor="@color/black"-->
<!--                app:cornerRadius="5dp" />-->

<!--            <Button-->
<!--                android:id="@+id/btn_facebook"-->
<!--                android:layout_width="150dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginLeft="5dp"-->
<!--                android:layout_marginRight="2.5dp"-->
<!--                android:layout_weight="1"-->
<!--                android:backgroundTint="@color/fbColour"-->
<!--                android:drawableLeft="@drawable/facebook"-->
<!--                android:padding="15dp"-->
<!--                android:text="@string/facebook"-->
<!--                app:cornerRadius="5dp" />-->

<!--        </LinearLayout>-->
<!--        <TextView-->
<!--            android:id="@+id/btn_phone"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:text="@string/sign_up_with_phone"-->
<!--            android:textSize="16sp"-->
<!--            android:textColor="@color/black"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:padding="5dp"/>-->


    </LinearLayout>
</LinearLayout>